# style_transfer_visualizer

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  WORKFLOW.md  config.py  config.toml  pyproject.toml  pytest.ini  requirements-cuda.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_visualizer.py  style_transfer_visualizer.py
.github/ISSUE_TEMPLATE/: release.md  release.yml
.github/workflows/: python-ci.yml
src/style_transfer_visualizer/: __init__.py  cli.py  config.py  config_defaults.py  constants.py  core_model.py  image_grid.py  image_io.py  logging_utils.py  loss_accumulator.py  loss_logger.py  main.py  optimization.py  random_utils.py  type_defs.py  types.py  utils.py  video.py
src/style_transfer_visualizer/gallery/: __init__.py  api.py  cli.py
src/style_transfer_visualizer/image_grid/: __init__.py  core.py  layouts.py  naming.py
src/style_transfer_visualizer/runtime/: __init__.py  comparison.py  device.py  output.py  validation.py  version.py
src/style_transfer_visualizer/visualization/: __init__.py  metrics.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_compare_grid.py  test_config.py  test_core_model.py  test_image_grid.py  test_image_grid_modules.py  test_image_io.py  test_image_processing.py  test_logging_utils.py  test_loss_accumulator.py  test_loss_logger.py  test_main.py  test_optimization.py  test_random_utils.py  test_run_visualizer.py  test_runtime_comparison.py  test_utils.py  test_version.py  test_video.py  test_video_output.py
tests/runtime/: test_device.py  test_output.py  test_validation.py  test_version.py
tests/visualization/: test_metrics.py
tools/: __init__.py  compare_grid.py
